--- a/src/styles/introduction.css
+++ b/src/styles/introduction.css
@@ -57,6 +57,7 @@
   animation-timing-function: ease-in-out;
 }
 
+
 @keyframes typing {
   0% {
     width: 0;
@@ -65,6 +66,9 @@
     width: 100%;
   }
   80% {
+    width: 0;
+  }
+  95% {
     width: 0;
   }
   100% {
