--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -107,13 +107,12 @@
 .projects_list_item h5 {
   margin-bottom: 0;
   font-size: 24px;
-  font-weight: 600;
+  font-weight: 500;
   color: var(--color-heading-wv);
-  text-align: center;
 }
 
 .projects_list_item h5:hover {
-  color: var(--color-primary);
+  text-decoration: underline;
 }
 
 @media screen and (max-width: 1024px) {
