--- a/src/styles/project_modal.css
+++ b/src/styles/project_modal.css
@@ -41,7 +41,6 @@
 .project_modal_container_img {
   height: 100%;
   background-color: #141315;
-  max-height: 400px;
   padding: 24px;
   border-radius: 16px;
   display: flex;
@@ -146,7 +145,7 @@
 
 @media screen and (max-width: 1200px) {
   .project_modal_container {
-    margin: -24px 128px 0;
+    margin: -24px 100px 0;
   }
 
   .project_modal_container_info h5 {
@@ -159,13 +158,14 @@
   }
 
   .project_modal_container_info p {
-    font-size: 17px;
-    line-height: 28px;
+    font-size: 16px;
+    line-height: 26px;
     width: 100%;
   }
 
   .project_modal_container_info h6 {
-    margin-top: 20px;
+    margin-top: 0;
+    font-size: 17px;
   }
 }
 
@@ -175,9 +175,14 @@
     padding: 36px;
   }
 
-  .project_modal_container {
-    margin: -24px 100px 0;
+  .project_modal_container_info h5 {
+    font-size: 26px;
   }
+
+  .project_modal_container {
+    margin: -24px 88px 0;
+  }
+  
 }
 
 @media screen and (max-width: 768px) {
